# ros_oadrive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/ros_oadrive/: DetectedObjectsConverter.h  EnvironmentObjectConverter.h  EventRegionConverter.h  EventTriggerNode.h  LightControlNode.h  MultiTrajectoryConverter.h  PlanningNode.h  Pose2dConverter.h  RoadPerceptionNode.h  StateMachineNode.h  StreetPatchConverter.h  TrackedObjectConverter.h  TrackedObjectsConverter.h  TrafficSignConverter.h
launch/: ContinuousRecording.launch  ControllerNode.launch  EventTriggerNode.launch  MapEventNode.launch  NavigatorNode.launch  ObjectDetectorNode.launch  ObjectTrackerNode.launch  PlanningNode.launch  RoadPerceptionNode.launch  SirenAudioDetectorNode.launch  StateMachineNode.launch  Yolo.launch
msg/: ControllerCommand.msg  ControllerStatus.msg  DetectedCar.msg  DetectedObject.msg  DetectedObjects.msg  DetectedPerson.msg  EmergencyBrake.msg  EnvironmentObject.msg  Event.msg  EventRegion.msg  ExtendedPose2d.msg  ExternalMarkerPosition.msg  ImagePosition.msg  JuryManeuver.msg  LightStatus.msg  MarkerPosition.msg  MultiTrajectory.msg  NavObstruction.msg  Pose2DStamped.msg  StateChange.msg  StreetPatch.msg  StreetPatchList.msg  StreetPatchOccupancy.msg  TrackedCar.msg  TrackedObject.msg  TrackedObjects.msg  TrackedPerson.msg  TrafficSign.msg  TrafficSignToBackend.msg  Trajectory2d.msg  USStatus.msg  Ultrasonic.msg
scripts/: install_car2x.sh  requirements.txt
scripts/kuer/: TeleOperationRemoteNode.py  nav-manager.py  teleop.py  utils.py
src/: BirdviewConverterNode.cpp  Car2XNode.py  ControllerNode.cpp  EmergencyBrakeNode.cpp  EventTriggerNode.cpp  LightControlNode.cpp  MapEventNode.cpp  NavigatorNode.cpp  ObjectDetectorNode.cpp  ObjectTrackerNode.cpp  OpenDriveMapNode.py  PlanningNode.cpp  RoadPerceptionNode.cpp  SirenDetectorNode.cpp  StateMachineNode.cpp  TeleOperationControllerNode.cpp  TeleOperationSwitchNode.cpp
src/converter/: DetectedObjectsConverter.cpp  EnvironmentObjectConverter.cpp  EventRegionConverter.cpp  MultiTrajectoryConverter.cpp  Pose2dConverter.cpp  StreetPatchConverter.cpp  TrackedObjectConverter.cpp  TrackedObjectsConverter.cpp  TrafficSignConverter.cpp
src/debug_nodes/: MarkerPositionFromCamera.py  ObjectVisualizationNode.cpp  PositionFakerNode.cpp  Readme.md  RosRawDataRecorder.cpp  StateMachineTestNode.cpp  TrajectoryRecorder.cpp  TrajectoryVisualizationNode.cpp  UltrasonicVisualizationNode.cpp  XboxControllerNode.cpp  rosDummyTrajectory.cpp
src/icl_hardware_g25_wheel/: CMakeLists.txt  G25RacingWheel.cpp  G25RacingWheel.h  ImportExport.h  Logging.cpp  Logging.h
srv/: EvokeTransition.srv
test/: CMakeLists.txt  MultiTrajectoryConverterTest.cpp  Pose2dConverterTest.cpp  Pose2dConverterTest.h
